# polymath

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs  test.rs
